fix: make minor color adjustments to improve text legibility/accessibilty.
See also: https://twitter.com/BryanEBraun/status/1644539906331402242

--- a/_includes/css/site.css
+++ b/_includes/css/site.css
@@ -275,7 +275,7 @@ hr {
   font-family: var(--sans-serif-stack);
   font-size: 0.875rem;
   text-align: center;
-  color: #666;
+  color: var(--bb-inert-gray);
   margin: 1.5rem 0;
 }
 .article-content img {
