--- a/_includes/css/variables.css
+++ b/_includes/css/variables.css
@@ -1,10 +1,10 @@
 :root {
   /* COLORS */
   --bb-blue1: #99ccdd;
-  --bb-blue2: #5599aa;
+  --bb-blue2: #4e95a6;
   --bb-orange: #d76b00;
-  --bb-off-black: #444444;
-  --bb-inert-gray: #888888;
+  --bb-off-black: #333333;
+  --bb-inert-gray: #767676;
   --bb-light-gray: #eeeeee;
   --bb-white: #ffffff;
   --bb-black: #000000;
